--- a/src/style/_headings.scss
+++ b/src/style/_headings.scss
@@ -1,3 +1,7 @@
+.journal-title > h1.title {
+    color: var(--ls-page-title-color) !important;
+}
+
 .items-baseline {
   align-items: center !important;
 }
