--- a/src/style/_block.scss
+++ b/src/style/_block.scss
@@ -1,5 +1,5 @@
 .block-children-left-border:hover {
-    background-color: var(--color-level-3);
+    background-color: var(--ls-guideline-color-hover);
 }
 .bracket {
     color: var(--ct-primary-color) !important;
