--- a/src/style/_block.scss
+++ b/src/style/_block.scss
@@ -13,3 +13,8 @@
 .custom-query > div.flex > div.content > div.foldable-title > div.flex-row > div.custom-query-title {
     margin-left: 17px !important;
 }
+.draw-wrap {
+    width: 0px !important;
+    height: 0px !important;
+    display: none !important;
+}
