--- a/src/style/_theme_light.scss
+++ b/src/style/_theme_light.scss
@@ -28,6 +28,7 @@ html[data-theme="white"] {
   --ls-primary-text-color: rgb(40, 40, 40);
   --ls-secondary-text-color: #161e2e;
   --ls-page-title-color: #1bab71;
+  --ls-journal-border-color: var(--color-level-4);
 
   --ct-bold-color: #000;
 
