--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,8 +5,9 @@
 @import "_code.scss";
 @import "_properties.scss";
 @import "_sidebars.scss";
-@import "_external_links.scss";
+@import "_links.scss";
 @import "_markers.scss";
 @import "_headings.scss";
+@import "_popups.scss";
 @import "_theme_dark.scss";
 @import "_theme_light.scss";
